# Orchard

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: release.yml  verify-tap-token.yml
crates/orch-cli/: Cargo.toml
crates/orch-cli/src/: main.rs  tui.rs
crates/orch-cli/src/tui/: rich.rs
crates/orch-cli/tests/: cli.rs
crates/orchard/: Cargo.toml
crates/orchard-ffi/: Cargo.toml
crates/orchard-ffi/include/: orchard.h
crates/orchard-ffi/src/: lib.rs
crates/orchard-ffi/tests/: ffi.rs
crates/orchard-ir/: Cargo.toml
crates/orchard-ir/src/: lib.rs  lower.rs  manifest.rs
crates/orchard-ir/tests/: ir.rs
crates/orchard-py/: Cargo.toml  pyproject.toml
crates/orchard-py/.cargo/: config.toml
crates/orchard-py/src/: lib.rs
crates/orchard-runtime/: Cargo.toml
crates/orchard-runtime/src/: agent.rs  coerce.rs  cron.rs  embeddings.rs  engine.rs  error.rs  events.rs  flow.rs  http.rs  lib.rs  policy.rs  pricing.rs  secrets.rs  traits.rs  value.rs
crates/orchard-runtime/src/providers/: mock.rs  mod.rs  remote.rs
crates/orchard-runtime/src/store/: memory.rs  mod.rs  redb_store.rs
crates/orchard-runtime/src/tools/: browser.rs  calc.rs  mcp.rs  mod.rs  net.rs  shell.rs
crates/orchard-runtime/tests/: providers.rs  redb.rs  scorer.rs
crates/orchard-syntax/: Cargo.toml
crates/orchard-syntax/src/: ast.rs  diagnostics.rs  error.rs  format.rs  lexer.rs  lib.rs  parser.rs  span.rs  tokens.rs
crates/orchard-syntax/tests/: format.rs  lexer.rs  parser.rs
crates/orchard-syntax/tests/fixtures/: assistant.orch  coder.orch  demo-offline.orch  ex_14_1_hello.orch  ex_14_2_triage.orch  ex_14_3_research.orch  ex_14_4_schedule.orch  mcp-notes.orch  ollama-local.orch  pipeline.orch  researcher.orch  torture.orch  triage.orch
crates/orchard-syntax/tests/golden/parser/: ex_14_1_hello.orch.ast  ex_14_2_triage.orch.ast  ex_14_3_research.orch.ast  ex_14_4_schedule.orch.ast
crates/orchard-types/: Cargo.toml
crates/orchard-types/src/: check.rs  lib.rs  types.rs
crates/orchard-types/tests/: check.rs
crates/orchard-wasm/: Cargo.toml
crates/orchard-wasm/src/: lib.rs
crates/orchard/examples/: embed_host.rs
crates/orchard/src/: lib.rs
crates/orchard/tests/: concurrency.rs  custom_provider.rs  delegate.rs  gen_as_t.rs  interp.rs  mcp.rs  memory.rs  net_shell.rs  parity.rs  safety.rs  tools.rs  triggers.rs
crates/orchard/tests/scripts/: breaker.yaml  budget.yaml  demo-script.yaml  exhaust.yaml  invalid_then_valid.yaml  invoice.yaml  native.yaml  restrict.yaml  retry_compose.yaml  triage.yaml
editors/vscode/: README.md  language-configuration.json  package.json
editors/vscode/syntaxes/: orchard.tmLanguage.json
examples/3.0/: README.md  assistant.orch  atlas.orch  coder.orch  demo-offline.orch  demo-script.yaml  mcp-notes.orch  ollama-local.orch  pipeline.orch  researcher.orch  scout.orch  triage.orch
examples/embed-c/: build.sh  main.c  orchard.h
examples/embed-python/: demo.py
examples/embed-web/: index.html
packaging/homebrew/: orchard.rb
packaging/macos/: build-pkg.sh  orchard.icns
packaging/windows/: orchard.wxs
scripts/: install.ps1  install.sh  package-release.sh  update-homebrew.sh
