[package]
name = "orch-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "The `orch` command-line interface for Orchard 3.0."

[[bin]]
name = "orch"
path = "src/main.rs"

[dependencies]
orchard = { workspace = true }
orchard-syntax = { workspace = true }
orchard-runtime = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
crossterm = "0.28"
