[package]
name = "orchard-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "C ABI for Orchard 3.0 — embed the agent runtime from C and any C-FFI host."

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
orchard = { workspace = true }
tokio = { workspace = true }
