[package]
name = "orchard-wasm"
version = "3.0.0"
edition = "2021"
license = "MIT"
description = "WebAssembly bindings for Orchard 3.0 (wasm-bindgen)."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
orchard = { path = "../orchard", default-features = false, features = ["wasm"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde_json = "1"

[profile.release]
opt-level = "s"
