[package]
name = "orchard"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Orchard 3.0: the embeddable agent language and runtime — the public facade API."

[features]
default = ["native"]
native = ["orchard-runtime/native"]
wasm = ["orchard-runtime/wasm"]

[dependencies]
orchard-syntax = { workspace = true }
orchard-types = { workspace = true }
orchard-ir = { workspace = true }
orchard-runtime = { workspace = true, default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
orchard-runtime = { workspace = true }
async-trait = { workspace = true }
